Adding IndexedDB info.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1901,9 +1901,291 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e69e97eb",
+   "metadata": {},
+   "source": [
+    "# IndexedDB\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "`IndexedDB` is for storing __large amounts__ of __structured data__ on the local system.  It is similar to `localStorage` in terms of scoping, but it is a __NoSQL__ database.\n",
+    "\n",
+    "An example usage would be caching a large amount of documentation after retrieving it from the server the first time.\n",
+    "\n",
+    "Like with `localStorage`, there is a global variable called `indexedDB` to provide this API.\n",
+    "\n",
+    "## Data Model\n",
+    "\n",
+    "1. An app can have one or more __databases__\n",
+    "1. A database can have one or more __object stores__\n",
+    "   - object stores are like __tables__ in SQL, except it's NoSQL\n",
+    "   - instead of having predefined columns, you put objects in its and they can have whatever fields they want\n",
+    "     - as long as they have the ones that are __indexed__\n",
+    "     - objects can have __mismatching__ fields, as long as the indexed ones are correct\n",
+    "1. An object store can have one or more __indices__ for efficient searching\n",
+    "   - to search by a __non-indexed__ field, you have to do a slow __linear search__\n",
+    "1. An object in an object store, which is like a __row__ in SQL, can be a JS object, an array, a primitive, etc.\n",
+    "\n",
+    "## Overall Flow\n",
+    "\n",
+    "1. A request to open the DB asynchronously is made\n",
+    "1. Handlers are added to the request, including:\n",
+    "   - first-time creation of data stores\n",
+    "   - version upgrades\n",
+    "   - successful completion\n",
+    "     - this is where you'd store or `resolve()` the DB instance\n",
+    "       - eg. if want to wrap it as a `Promise`\n",
+    "   - error\n",
+    "1. After the async code indicates success, the DB instance can be used to make transactions and query\n",
+    "1. Transactional updates and/or queries are performed on the DB instance (asynchronously)\n",
+    "1. The connection can be closed if needed\n",
+    "\n",
+    "## Database Versioning\n",
+    "\n",
+    "  - Databases have __integer__ versions\n",
+    "  - If a __non-existent database__ is open, it will have the version specified on open (defaulting to `1` if not specified)\n",
+    "  - If an __existing database__ is open, it will be open as the version specified on open (defaulting to the current version if not specified)\n",
+    "    - If the specified version is higher than the existing database, that is considered an __upgrade__, which triggers an event you can handle to perform the upgrade\n",
+    "    - If the specified version is lower than the existing database, that will throw an __error__ and fail to open\n",
+    "  - In general, __creation__ and __upgrade__ (the same event handler) are the only times you can change the __structure__ of the database (add/remove/modify object stores, indices, etc.)\n",
+    "  - IndexedDB has no awareness of what versions for your DB mean - it is for your upgrade code to interpret it\n",
+    "    - The point is that the automatically triggered update event ensures that your CRUD code is working with the right schema\n",
+    "    \n",
+    "## Asynchronous Behavior\n",
+    "\n",
+    "Instead of returning promises, `IndexedDB` (when applicable) returns __requests__ which you can add __handlers__ to.  In a future event loop iteration, those handlers will get called.\n",
+    "\n",
+    "In any case where you make such a request, you could always wrap the code in `new Promise((resolve) => ...` and call `resolve(request.result)` for instance, and then you could return that from an `async` function/method.\n",
+    "    \n",
+    "## Creating/Opening DB\n",
+    "\n",
+    "```JavaScript\n",
+    "// You could wrap this whole thing in a `Promise` constructor and take `resolve` in the lambda.\n",
+    "\n",
+    "const request = indexedDB.open('MyDatabase', 1); // version number is optional\n",
+    "// The DB is not open yet - this is done asynchronously\n",
+    "\n",
+    "request.onupgradeneeded = (event) => {\n",
+    "    // This will be called first, on creation or upgrade (in a future event loop cycle)\n",
+    "    const db = event.target.result;\n",
+    "    console.log(`Upgrading from ${event.oldVersion} to ${db.version}`); // oldVersion is 0 if creating\n",
+    "    \n",
+    "    // Create/delete object stores and indices here\n",
+    "};\n",
+    "\n",
+    "request.onsuccess = (event) => {\n",
+    "    // This will be called after creation/upgrade when the DB is fully open\n",
+    "    resolve(event.target.result);  // Example: resolve a promise with the DB instance\n",
+    "};\n",
+    "\n",
+    "request.onerror = (event) => {\n",
+    "    console.log(request.error);\n",
+    "};   \n",
+    "\n",
+    "request.onblocked = (event) => {\n",
+    "    // This will be called if the DB is open somewhere else and can't be upgraded.\n",
+    "};\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e1dbebe",
+   "metadata": {},
+   "source": [
+    "## Object Store Management\n",
+    "\n",
+    "These should be done in the `onupgradeneeded` handler, and they are __synchronous__.\n",
+    "\n",
+    "  - `db.createObjectStore(storeName, { keyPath: 'id', autoIncrement: true });`\n",
+    "    -  the 2nd arg is optional, only if you need to supply either `keyPath` __and/or__ `autoIncrement`\n",
+    "  - `const hasStore = db.objectStoreNames.contains(storeName)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "757a1389",
+   "metadata": {},
+   "source": [
+    "## Transactions\n",
+    "\n",
+    "These can be done anytime after the DB is successfully opened or inside the `onupgradeneeded` handler.\n",
+    "\n",
+    "  - `const tx = db.transaction(storeName, 'readwrite';)`\n",
+    "    - get a transaction on a single store, in read/write mode\n",
+    "  - `const tx = db.transaction([store1, store2], 'readonly');`\n",
+    "    - can also pass multiple stores and/or use readonly (the __default__)\n",
+    "  - `const store = tx.objectStore(storeName);`\n",
+    "    - get a specific object store from a transaction\n",
+    "  - Perform operations like `store.add(item)` on the store from the transaction\n",
+    "    - these don't affect the real DB yet\n",
+    "  - When the code returns to the JS event loop, all changes made in a transaction will get __committed__ to the real DB\n",
+    "    - You can add `oncomplete` and `onerror` handlers to the transaction before returning if needed\n",
+    "    - If async operations were kicked off inside the transaction (such as `store.get()`, the transaction knows to wait for those before commiting\n",
+    "    - A transaction that is started inside `onupgradeneeded` will block moving onto `onsuccess` until it is completed, even if async"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1341009",
+   "metadata": {},
+   "source": [
+    "## CRUD Operations\n",
+    "\n",
+    "These are performed on stores in __transactions__ (even for reading).\n",
+    "\n",
+    "  - `store.add(item)`\n",
+    "    - __create__ an object in the store\n",
+    "  - `const request = store.get(key);`\n",
+    "    - __get__ an item by key __asynchronously__\n",
+    "      - use `request.onsuccess` and `request.onerror` to listen to the result\n",
+    "      - `request.result` will have the item if successful\n",
+    "      - you don't have to listen to the transaction's handlers if this is all you're doing\n",
+    "      - you might have a promise inside of a promise in order to do mutations on retrieved objects\n",
+    "        - the transaction will __wait for all queued tasks__ such as this before commiting\n",
+    "          - this will allow you to use the same `store` object to modify the store based on retrieved items\n",
+    "  - `const request = store.getAll();`\n",
+    "    - __get__ all items __asynchronously__ as an __array__\n",
+    "  - `store.put(item);`\n",
+    "    - __update__ existing item\n",
+    "  - `store.delete(key);`\n",
+    "    - __delete__ existing item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f2232f6",
+   "metadata": {},
+   "source": [
+    "## Keys\n",
+    "\n",
+    "  - each object in a store has a __primary key__\n",
+    "    - this primary key is used for __CRUD__ operations to uniquely identify the object\n",
+    "  - `keyPath` parameter in `db.createObjectStore()` says the name of the field that will be treated as the primary key\n",
+    "    - if not specified, the object has a primary key that is not visibly part of the object (secretly stored)\n",
+    "    - you must either __manually supply it in CRUD calls__ or use __autoincrement__\n",
+    "  - `autoincrement` parameter in `db.createObjectStore()` lets you __ommit the key__ when inserting an object\n",
+    "    - it will autopopulate it with the next available number\n",
+    "    - you can still __manually specify__ that field in the object to override this\n",
+    "    - `autoincrement` will use the next number after the highest seen so far (by manual or automatic insertion)\n",
+    "      - it will __not repeat__ numbers if there have been deletions\n",
+    "  - If you have no `keyPath` and no `autoincrement`, you have to manually specify an _id_ field on CRUD operations using a different parameter\n",
+    "  - If you have `autoincrement` but no `keyPath`, APIs that take a key will work (since those don't know the field name anyway), but you won't see the key when you fetch the object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f35985e6",
+   "metadata": {},
+   "source": [
+    "## Index\n",
+    "\n",
+    "  - an index gives you a way to __query by other fields__ besides the primary key\n",
+    "  - indexes can only be __created in `onupgradeneeded`__\n",
+    "  - `store.createIndex(indexName, fieldName, { unique: true });`\n",
+    "    - index by a given field, where all values of the field are assumed unique\n",
+    "    - `unique: false` will not make that assumption (less efficient)\n",
+    "  - to make use of the index when getting objects:\n",
+    "    ```JavaScript\n",
+    "    const index = store.index(indexName);\n",
+    "    const request = index.get(value); // this part works just like if you did it with the primary key on the store\n",
+    "    ```\n",
+    "  - for a non-unique index, you would use `index.getAll(value)` instead\n",
+    "  - to query by a __non-indexed field__, the only way is to do a __linear search__\n",
+    "    - `store.getAll()` and then `request.result.filter()` for instance\n",
+    "  - `store.indexNames.contains(indexName)` can be used to check if an index exists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b444724",
+   "metadata": {},
+   "source": [
+    "## Upgrades\n",
+    "\n",
+    "To upgrade the DB version, in the `onupgradeneeded` handler, you can do the following:\n",
+    "\n",
+    "  - create new object stores\n",
+    "  - delete object stores\n",
+    "  - get all objects from old object store and insert them (transformed) into new object store\n",
+    "  - query all objects in existing object store and update with a new field\n",
+    "  - add and delete indexes\n",
+    "  - etc. etc.\n",
+    "  \n",
+    "You cannot do these things:\n",
+    "\n",
+    "  - change `keyPath` or `autoincrement` on existing store\n",
+    "  - change name of existing store\n",
+    "  \n",
+    "To change an existing store, you have to __recreate__ it (delete and create).  You can query the objects first and protect them in memory before inserting into the new store."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38cb85ab",
+   "metadata": {},
+   "source": [
+    "## Closing\n",
+    "\n",
+    "You don't necessarily have to call `db.close()`, but doing so may prevent blocking upgrades.  It will automatically close if the __page closes__."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4e37b81",
+   "metadata": {},
+   "source": [
+    "## Chrome DevTools\n",
+    "\n",
+    "You can see `IndexedDB` storage in DevTools as follows:\n",
+    "1. `Application` tab\n",
+    "1. `Storage`\n",
+    "1. `IndexedDB`\n",
+    "1. Databases listed (round DB symbol)\n",
+    "1. Object Stores underneath (table symbol)\n",
+    "1. Indexed fields underneath (except for primary key)\n",
+    "1. Objects in the store (rows) when you click on the object store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1691122",
+   "metadata": {},
+   "source": [
+    "## ngx-indexed-db\n",
+    "\n",
+    "This is a __3rd party library__ for making `IndexedDB` easier to use in __Angular__ specifically (ngx means Angular extensions).\n",
+    "\n",
+    "A lot of the boilerplate of dealing with the DB and object stores is configured via __dependency injection__ (eg. in `NgModule`, including:\n",
+    "  - database name\n",
+    "  - database version\n",
+    "  - object store names\n",
+    "  - object store primary keys\n",
+    "  - object store indexes\n",
+    "    - although these are referred to as __schema__, it does not imply that other fields are not allowed\n",
+    "    \n",
+    "The above is enough information for the library to figure out how to handle `onupgradeneeded` for you, including if you bump the version and change the schema.\n",
+    "\n",
+    "CRUD operations are then performed as follows:\n",
+    "  - inject `NgxIndexedDBService`\n",
+    "    - note that if you have multiple DBs, you'll need to set up __tokens__\n",
+    "  - call methods of that service to do CRUD operations\n",
+    "    - these give back an `Observable` you can subscribe to\n",
+    "  - `this.dbService.add('users', user1)` creates a new entry and gives an observable of the __added key__\n",
+    "  - `this.dbService.getByKey('users', id)` gets an observable of the __stored object__ with that primary key\n",
+    "  - `this.dbService.getAll('users')` gets an observable of the __array of objects__ as 1 entry\n",
+    "  - `this.dbService.getByIndex('users', 'byEmail', email)` gets an observable of the __stored object__ with that email (an indexed field)\n",
+    "  - `this.dbService.update('users', user1)` gets an observable of nothing (just a signal)\n",
+    "  - `this.dbService.delete('users', id)` also gets an observable of nothing\n",
+    "  \n",
+    "The library automatically makes a __transaction__ for each CRUD operation.  You can also do it __manually__ (eg. to group operations) like this: `this.dbService.transaction('users', 'readwrite')` which gives you an `Observable` of the transaction.  Then you write the code in `subscribe` like you would in __pure IndexedDB__."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf577b5",
+   "id": "259512e3",
    "metadata": {},
    "outputs": [],
    "source": []
