--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "Some of these were already discussed in the `Strings` notebook, but this is a more complete list.\n",
     "\n",
-    "__WARNING__: logging an object to the console may prevent it from being __garbage collected__, so don't do it too much in production."
+    "__WARNING__: logging an object to the console may prevent it from being __garbage collected__, so don't do it too much in production.\n",
+    "\n",
+    "__NOTE__: objects shown by `console.log()` are frozen (do not update if object updated after."
    ]
   },
   {
@@ -1690,6 +1692,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4aaf8c7d",
+   "metadata": {},
+   "source": [
+    "# MutationObserver\n",
+    "\n",
+    "A `MutationObserver` lets you track changes to a DOM element's subtree, such as _adding a child_, _modifying an attribute_, etc.\n",
+    "\n",
+    "The API is very similar to `IntersectionObserver` above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c4a6edb",
    "metadata": {},
    "source": [
@@ -2086,6 +2100,8 @@
     "  - `store.createIndex(indexName, fieldName, { unique: true });`\n",
     "    - index by a given field, where all values of the field are assumed unique\n",
     "    - `unique: false` will not make that assumption (less efficient)\n",
+    "    - you can't index by an object, but you can index by a field of an object:\n",
+    "      - `store.createIndex(indexName, 'info.name');`\n",
     "  - to make use of the index when getting objects:\n",
     "    ```JavaScript\n",
     "    const index = store.index(indexName);\n",
@@ -2145,7 +2161,9 @@
     "1. Databases listed (round DB symbol)\n",
     "1. Object Stores underneath (table symbol)\n",
     "1. Indexed fields underneath (except for primary key)\n",
-    "1. Objects in the store (rows) when you click on the object store"
+    "1. Objects in the store (rows) when you click on the object store\n",
+    "\n",
+    "You can also manually __clear__, __delete__, __modify__, etc."
    ]
   },
   {
