Adding some items to DOM notes.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1448,8 +1448,10 @@
     "  - a way to propagate errors from scripts into handlers without having to break the code flow\n",
     "  \n",
     "- `InputEvent`\n",
-    "  - used for __input__ events from `<input>` control changes\n",
+    "  - used for __input__ events from `<input>` control changes (or `conventeditable` elements)\n",
     "  - `e.data` gives inserted text (if applicable)\n",
+    "    - for manual entry, usually it will be `null` for a deletion and one character of input\n",
+    "      - highlighting text and typing over it would emit once for the first char and then for each char\n",
     "  - `e.inputType` tells you what the change was (eg. insert, delete, etc.)\n",
     "\n",
     "- `FocusEvent`\n",
@@ -1461,6 +1463,42 @@
     "  - `e.submitter` has the button that was used to submit\n",
     "- and __many many more__\n",
     "  - see MDN as needed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f322b342",
+   "metadata": {},
+   "source": [
+    "# Selections\n",
+    "\n",
+    "- `document.getSelection()` gets an object that has the following:\n",
+    "  - `anchorNode`\n",
+    "    - the HTML element (or text node) where the selection starts\n",
+    "  - `anchorOffset`\n",
+    "    - index within `anchorNode` where selection starts (in chars)\n",
+    "  - `focusNode`\n",
+    "    - HTML element (or text node) where selection ends\n",
+    "    - if the selection is all within one node, this will be the same as `anchorNode`\n",
+    "  - `focusOffset`\n",
+    "    - index within `focusNode` where selection ends (in chars)\n",
+    "    - if the selection is zero length (just a cursor), `focusNode` and `focusOffset` will equal `anchorNode` and `anchorOffset`\n",
+    "  - `rangeCount`\n",
+    "    - number of ranges\n",
+    "      - 1 in the simple case\n",
+    "      - could have multiple non-contiguous also\n",
+    "  - `getRangeAt(index)`\n",
+    "    - gets the ith range object in the current selection\n",
+    "      - `index` should be less than `rangeCount`\n",
+    "    - `startContainer`, `startOffset`, `endContainer`, `endOffset`\n",
+    "      - these are like `anchor*` and `focus*` counterparts in the selection object\n",
+    "    - `insertNode(node)`\n",
+    "      - can be used to add a node to the beginning of the selection (splitting DOM nodes if needed)\n",
+    "  - whether an `<input>` or its host `<form>` is selected seems to depend on browser\n",
+    "    - could use a `contenteditable` `<div>` instead to make it more predictable\n",
+    "  - a selection exists even if you click in a node that is not editable\n",
+    "    - no visible caret does not mean no selection\n",
+    "    - eg. if you click on a character in a `<div>`, then you have a 0 length selection inside that `<div>`"
    ]
   },
   {
@@ -1842,6 +1880,7 @@
     "  - `el.getBoundingClientRect()` to translate client coordinates (eg. from mouse events) into viewport coordinates (eg. for graphics)\n",
     "  - `el.getElementsByTagName()`, `el.getElementsByClassName`, `el.querySelector()`, `el.querySelectorAll()`\n",
     "  - a lot of other convenience operations listed in MDN\n",
+    "  - `el.closest(selector)` searches the element and up its __ancestor chain__ for a matching node\n",
     "  \n",
     "- `HTMLElement`\n",
     "  - sublcass of `Element` specific to HTML\n",
@@ -1865,6 +1904,31 @@
     "  - no unique members\n",
     "  \n",
     "- Others include: `HTMLAnchorElement`, `HTMLImageElement`, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2d6f400",
+   "metadata": {},
+   "source": [
+    "# innerText and innerHTML\n",
+    "\n",
+    "- `HTMLElement.innerText` scrapes just the text from all child nodes/elements when read\n",
+    "  - when __written__, it will destroy all the DOM underneath and just put text there (as a text node)\n",
+    "- `Element.innerHTML` renders the child nodes and elements as HTML code\n",
+    "  - when __written__, it will replace the DOM based on the new code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2db331c8",
+   "metadata": {},
+   "source": [
+    "# DOM Debugging\n",
+    "\n",
+    "- `console.log(el.cloneNode(true))`\n",
+    "  - deep copies an element/node and puts it to console for inspection\n",
+    "- can also watch the `Elements` tab in realtime while interacting with DOM to execute code paths"
    ]
   },
   {
