Adding some more DOM stuff.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -36,12 +36,16 @@
     "\n",
     "__WARNING__: logging an object to the console may prevent it from being __garbage collected__, so don't do it too much in production.\n",
     "\n",
-    "__NOTE__: objects shown by `console.log()` are frozen (do not update if object updated after."
+    "__NOTE__: objects shown by `console.log()` are frozen (do not update if object updated after.\n",
+    "\n",
+    "__NOTE__: `console.clear()` only works if you disable `Preserve Logs` in the console settings in devtools\n",
+    "\n",
+    "The boolean global variable `disableConsole` can be used to disable console logging.  One example of why you'd want to do this is if the console logs in a component are causing objects to not get garbage-collected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "9b345cdd",
    "metadata": {},
    "outputs": [
@@ -91,6 +95,7 @@
       "The group\n",
       "  { a: [ 1, 2, 3 ], b: 4, c: 'hi' }\n",
       "  [ 1, 2, 3 ]\n",
+      "2025-03-23T04:19:15.038Z\n",
       "Started the fetch\n"
      ]
     },
@@ -100,7 +105,7 @@
        "undefined"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -108,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "default: 259.846ms\n"
+      "default: 163.028ms\n"
      ]
     }
    ],
@@ -140,6 +145,9 @@
     "    console.log(m);\n",
     "    console.log(m.a);\n",
     "    console.groupEnd();\n",
+    "    \n",
+    "    // Simple timestamp (with fractional seconds)\n",
+    "    console.log((new Date()).toISOString());\n",
     "    \n",
     "    // Timing\n",
     "    console.time();\n",
@@ -277,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d46790d6",
    "metadata": {},
    "outputs": [
@@ -285,7 +293,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-05-24T03:49:23.522Z\n",
+      "2025-03-23T04:17:37.784Z\n",
+      "2025-03-23T04:17:37.784Z\n",
       "2023-05-23T17:30:00.000Z\n",
       "23\n",
       "4\n",
@@ -307,7 +316,7 @@
        "undefined"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,6 +325,8 @@
     "(() => {\n",
     "  const currentDate = new Date();\n",
     "  console.log(currentDate);\n",
+    "    \n",
+    "  console.log((new Date()).toISOString());\n",
     "\n",
     "  const specificDate = new Date(2023, 4, 23, 10, 30, 0);\n",
     "  console.log(specificDate);\n",
@@ -843,6 +854,16 @@
     "    \n",
     "    console.log('done'); // the only thing that will print\n",
     "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e37214b",
+   "metadata": {},
+   "source": [
+    "# Microtasks\n",
+    "\n",
+    "Tasks are normally queued up to run in order of insertion after the current event loop iteration. There is also a __microtask API__ in JavaScript to queue microtasks, which are tasks that must all be completed before the next task can be picked up."
    ]
   },
   {
@@ -1476,12 +1497,12 @@
     "  - `anchorNode`\n",
     "    - the HTML element (or text node) where the selection starts\n",
     "  - `anchorOffset`\n",
-    "    - index within `anchorNode` where selection starts (in chars)\n",
+    "    - index within `anchorNode` where selection starts (in chars if a text node, otherwise in nodes)\n",
     "  - `focusNode`\n",
     "    - HTML element (or text node) where selection ends\n",
     "    - if the selection is all within one node, this will be the same as `anchorNode`\n",
     "  - `focusOffset`\n",
-    "    - index within `focusNode` where selection ends (in chars)\n",
+    "    - index within `focusNode` where selection ends (in chars or nodes)\n",
     "    - if the selection is zero length (just a cursor), `focusNode` and `focusOffset` will equal `anchorNode` and `anchorOffset`\n",
     "  - `rangeCount`\n",
     "    - number of ranges\n",
@@ -1498,7 +1519,8 @@
     "    - could use a `contenteditable` `<div>` instead to make it more predictable\n",
     "  - a selection exists even if you click in a node that is not editable\n",
     "    - no visible caret does not mean no selection\n",
-    "    - eg. if you click on a character in a `<div>`, then you have a 0 length selection inside that `<div>`"
+    "    - eg. if you click on a character in a `<div>`, then you have a 0 length selection inside that `<div>`\n",
+    "  - you can __modify__ the global selection (eg. insert a node)"
    ]
   },
   {
