Adding info about safe-navigation and functions.

--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -869,16 +869,18 @@
    "id": "ca0c5f93",
    "metadata": {},
    "source": [
-    "# Save Navigation\n",
+    "# Safe Navigation\n",
     "\n",
-    "You can chain together variables with ? before . and if at any point in the chain it gets a null or undefined (at runtime), it will just return that value for the whole chain.\n",
+    "You can chain together variables with ? before . and if at any point in the chain it gets a null or undefined (at runtime), it will just return that value for the whole chain.  (it might convert it to `undefined` though)\n",
     "\n",
-    "`?.` is the actual operator."
+    "`?.` is the actual operator.\n",
+    "\n",
+    "__NOTE__: sometimes the operator is used in places where you normally would not use a `.`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e5036885",
    "metadata": {},
    "outputs": [
@@ -889,6 +891,8 @@
       "undefined\n",
       "123 Main St\n",
       "3\n",
+      "undefined\n",
+      "100\n",
       "undefined\n"
      ]
     },
@@ -898,7 +902,7 @@
        "undefined"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,6 +938,12 @@
     "  console.log(a?.[2]); // how to do safe navigation on something indexable\n",
     "  console.log(b?.[2]);\n",
     "  //console.log(a.[2]); // ILLEGAL (.[ is a special case by whether ? is present])\n",
+    "    \n",
+    "  const f = () => 100;\n",
+    "  const g = null;\n",
+    "    \n",
+    "  console.log(f?.()); // Output: 100\n",
+    "  console.log(g?.()); // Output: undefined\n",
     "})();\n"
    ]
   },
