Adding more DOM stuff.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1469,10 +1469,12 @@
     "  - a way to propagate errors from scripts into handlers without having to break the code flow\n",
     "  \n",
     "- `InputEvent`\n",
-    "  - used for __input__ events from `<input>` control changes (or `conventeditable` elements)\n",
+    "  - used for __input__ events from `<input>` control changes (or `contenteditable` elements)\n",
     "  - `e.data` gives inserted text (if applicable)\n",
     "    - for manual entry, usually it will be `null` for a deletion and one character of input\n",
     "      - highlighting text and typing over it would emit once for the first char and then for each char\n",
+    "      - it is possible in some cases to get multiple characters of input at a time and to get `null` for a newline (eg. when using the deprecated `execcommand()`)\n",
+    "      - keep in mind it is reactive to the data having already changed (the DOM is already updated when this comes)\n",
     "  - `e.inputType` tells you what the change was (eg. insert, delete, etc.)\n",
     "\n",
     "- `FocusEvent`\n",
@@ -1520,7 +1522,8 @@
     "  - a selection exists even if you click in a node that is not editable\n",
     "    - no visible caret does not mean no selection\n",
     "    - eg. if you click on a character in a `<div>`, then you have a 0 length selection inside that `<div>`\n",
-    "  - you can __modify__ the global selection (eg. insert a node)"
+    "  - you can __modify__ the global selection (eg. insert a node)\n",
+    "  - `console.log(String(selection))` to see what the selected text is"
    ]
   },
   {
