Adding even more DOM stuff.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1407,7 +1407,7 @@
     "- `touch*`\n",
     "- `drag*`\n",
     "- `DOMContentLoaded`\n",
-    "- `submit`/`change`/`focus`/`blur`/`input`\n",
+    "- `submit`/`change`/`focus`/`blur`/`input`/`paste`\n",
     "- `animationstart`/`animationcancel`/`animationend`"
    ]
   },
@@ -1476,6 +1476,13 @@
     "      - it is possible in some cases to get multiple characters of input at a time and to get `null` for a newline (eg. when using the deprecated `execcommand()`)\n",
     "      - keep in mind it is reactive to the data having already changed (the DOM is already updated when this comes)\n",
     "  - `e.inputType` tells you what the change was (eg. insert, delete, etc.)\n",
+    "\n",
+    "- `PasteEvent`\n",
+    "  - used for __paste__ events from `<input>`, `<textarea>`, `contenteditable` elements, etc.\n",
+    "    - `e.clipboardData` used to get contents of clipboard by data type\n",
+    "      - `e.clipboardData.getData('text/plain')`\n",
+    "      - default for `contenteditble` div paste is `text/html`\n",
+    "    - to handle the pasting yourself, you need to do `event.preventDefault()` in the handler\n",
     "\n",
     "- `FocusEvent`\n",
     "  - form focus events like __blur__, __focus__, etc.\n",
@@ -1936,12 +1943,15 @@
    "id": "c2d6f400",
    "metadata": {},
    "source": [
-    "# innerText and innerHTML\n",
+    "# innerText, innerHTML, and textContent\n",
     "\n",
     "- `HTMLElement.innerText` scrapes just the text from all child nodes/elements when read\n",
     "  - when __written__, it will destroy all the DOM underneath and just put text there (as a text node)\n",
     "- `Element.innerHTML` renders the child nodes and elements as HTML code\n",
-    "  - when __written__, it will replace the DOM based on the new code"
+    "  - when __written__, it will replace the DOM based on the new code\n",
+    "- `Node.textContent` is similar to `HTMLElement.innerText`\n",
+    "  - while `innerText` only shows what is human-readable, `textContent` will show a bit more (eg. `<script>`s\n",
+    "  - `textContent` will also show content that is CSS-hidden (unlike `innerText`)"
    ]
   },
   {
@@ -1954,6 +1964,28 @@
     "- `console.log(el.cloneNode(true))`\n",
     "  - deep copies an element/node and puts it to console for inspection\n",
     "- can also watch the `Elements` tab in realtime while interacting with DOM to execute code paths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0599896",
+   "metadata": {},
+   "source": [
+    "# DocumentFragment\n",
+    "\n",
+    "`DocumentFragment` is a type of non-displaying element that can act like the root of a DOM tree for temporary staging. When you insert a document fragment into a real DOM node, the children are appended at the same level (rather than under the fragment), and the fragment itself becomes empty.\n",
+    "\n",
+    "```JavaScript\n",
+    "const fragment = new DocumentFragment();\n",
+    "const child1 = document.createElement('div');\n",
+    "const child2 = document.createElement('div');\n",
+    "fragment.append(child1);\n",
+    "fragment.append(child2);\n",
+    "\n",
+    "document.querySelector('.parent').append(fragment); // .parent will contain child1 and child2 directly\n",
+    "```\n",
+    "\n",
+    "This is just like the `React` `<></>` syntax."
    ]
   },
   {
