Adding a couple of quick Python facts.

--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -1217,9 +1217,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5d40b3a",
+   "metadata": {},
+   "source": [
+    "# Detecting Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6d61aae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicates: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 1]\n",
+    "print('Duplicates:', len(a) != len(set(a)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ae76961",
+   "id": "182e0a24",
    "metadata": {},
    "outputs": [],
    "source": []
