--- a/python/Type Hints.ipynb
+++ b/python/Type Hints.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "65ae4bf0",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1845138c",
    "metadata": {},
@@ -19,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "50b4848b",
    "metadata": {},
@@ -28,7 +25,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9cc70888",
    "metadata": {},
@@ -39,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a21c3a89",
    "metadata": {},
@@ -59,7 +54,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cdf2900d",
    "metadata": {},
@@ -110,7 +104,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cd8cccdd",
    "metadata": {},
@@ -130,7 +123,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5400f805",
    "metadata": {},
@@ -164,7 +156,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aedd4ae3",
    "metadata": {},
@@ -201,7 +192,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b9c09d65",
    "metadata": {},
@@ -241,7 +231,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cbbc09fa",
    "metadata": {},
@@ -282,7 +271,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e44d1ba9",
    "metadata": {},
@@ -305,7 +293,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a94a1ce1",
    "metadata": {},
@@ -330,7 +317,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "761e98bb",
    "metadata": {},
@@ -352,7 +338,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e99f16d9",
    "metadata": {},
@@ -439,7 +424,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d30e660e",
    "metadata": {},
@@ -448,7 +432,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "16520bc9",
    "metadata": {},
@@ -529,7 +512,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5ced5fb3",
    "metadata": {},
@@ -538,7 +520,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f4f877dd",
    "metadata": {},
@@ -547,7 +528,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "97af4843",
    "metadata": {},
@@ -584,7 +564,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "59cd9ed1",
    "metadata": {},
@@ -621,17 +600,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "210fc86b",
+   "cell_type": "markdown",
+   "id": "3695da4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Types as Types\n",
+    "\n",
+    "Things like __type unions__ operate on actual types to create new types - they aren't just type hint sugar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1cae2cd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'type'>\n",
+      "int | bool\n",
+      "<class 'types.UnionType'>\n",
+      "\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = int\n",
+    "print(t)\n",
+    "print(type(t))\n",
+    "u = int | bool\n",
+    "print(u)\n",
+    "print(type(u))\n",
+    "print()\n",
+    "\n",
+    "print(isinstance(5, int|bool))\n",
+    "print(isinstance(True, int|bool))\n",
+    "print(isinstance(2.3, int|bool))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff15c2e",
+   "id": "edb94d8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -653,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
