--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1951,7 +1951,9 @@
     "  - when __written__, it will replace the DOM based on the new code\n",
     "- `Node.textContent` is similar to `HTMLElement.innerText`\n",
     "  - while `innerText` only shows what is human-readable, `textContent` will show a bit more (eg. `<script>`s\n",
-    "  - `textContent` will also show content that is CSS-hidden (unlike `innerText`)"
+    "  - `textContent` will also show content that is CSS-hidden (unlike `innerText`)\n",
+    "- all 3 will turn __newlines__ into spaces\n",
+    "  - you can wrap the lines in divs and search for the divs to get around that, otherwise the newlines are lost"
    ]
   },
   {
