Adding more JS and TS info.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -5261,6 +5261,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7477898",
+   "metadata": {},
+   "source": [
+    "## Properties with setters/getters vs. Member Fields\n",
+    "\n",
+    "In most cases, `get x() { return 100; }` is equivalent to `readonly x = 100` in a class/interface/object.  If you provide a setter, that is like removing the `readonly`. Both cases will be accesed as either `o.x` or `o['x']`.\n",
+    "\n",
+    "Calling a setter that isn't there will just be ignored (in JS, but error in TS compiler).  Calling a getter that isn't there will give you `undefined`.\n",
+    "\n",
+    "If you need to tell the difference between the two, you can use `Object.getOwnPropertyDescriptor()`.\n",
+    "\n",
+    "In terms of __TypeScript Interfaces__, which are compiler-only, you can now use them interchangeably as described above.  In the past, you could only use _fields_ to represent both kinds of things."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a121ae1b",
    "metadata": {},
    "source": [
