--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -2324,9 +2324,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2cef1a3d",
+   "metadata": {},
+   "source": [
+    "# Record<TKey, TValue>\n",
+    "\n",
+    "`Record<TKey, TValue>` is a __utility type__ provided by the TS compiler (available globally without import).\n",
+    "\n",
+    "It represents an object that is used like a dictionary.  For instance, this is a `Record<string, number>`: \n",
+    "```JS\n",
+    "class MyRecord {\n",
+    "    a = 10; // key is 'a', value is 10\n",
+    "    b = 20; // key is 'b', value is 20\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "259512e3",
+   "id": "2dcbfeb6",
    "metadata": {},
    "outputs": [],
    "source": []
