--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2609,9 +2609,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f59607ea",
+   "metadata": {},
+   "source": [
+    "# Literals as Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4dc228c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "bla\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    let s: number | 'bla' | 'alb' = 100;\n",
+    "    console.log(s);\n",
+    "    \n",
+    "    s = 'bla';\n",
+    "    console.log(s);\n",
+    "    \n",
+    "    // s = 'hi'; // ILLEGAL\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a95339",
+   "id": "3b68c0d5",
    "metadata": {},
    "outputs": [],
    "source": []
